Code fixes done to show expand/collapse for the footer row

--- a/components/page-invoices/page-invoices.less
+++ b/components/page-invoices/page-invoices.less
@@ -104,9 +104,9 @@ rn-grid-invoice {
       tr.child {
 
         display: none;
-        td:first-child{
+        /*td:first-child{
           border-left: 1px solid #666666;
-        }
+        }*/
         &.visible {
           display: -webkit-flex;
         }
